fixed bug of closing modal on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,7 +76,7 @@ nav {
   display: none;
 }
 
-nav>ul {
+nav > ul {
   width: 90%;
   height: 100%;
   list-style-type: none;
@@ -87,7 +87,7 @@ nav>ul {
   grid-template-rows: 100%;
 }
 
-nav>ul>li,
+nav > ul > li,
 .header-links {
   height: 100%;
   display: flex;
@@ -136,7 +136,7 @@ nav>ul>li,
   z-index: 0;
 }
 
-.background>.opacity-mask {
+.background > .opacity-mask {
   width: 100%;
   height: 100vh;
   background: linear-gradient(180deg, #600364 0%, #b15f43 31%, #fcb425 75%);
@@ -158,7 +158,7 @@ nav>ul>li,
   height: 100%;
 }
 
-.background-elements>.img-container:nth-child(1) {
+.background-elements > .img-container:nth-child(1) {
   z-index: 0;
   grid-column: 1/2;
   grid-row: 1/11;
@@ -166,7 +166,7 @@ nav>ul>li,
   height: 100%;
 }
 
-.background-elements>.img-container:nth-child(2) {
+.background-elements > .img-container:nth-child(2) {
   z-index: 0;
   grid-column: 1/2;
   grid-row: 1/11;
@@ -196,7 +196,7 @@ nav>ul>li,
   transition: height 0.7s;
 }
 
-.background-elements>.img-container:nth-child(3) {
+.background-elements > .img-container:nth-child(3) {
   z-index: 0;
   grid-column: 1/2;
   grid-row: 5/11;
@@ -230,7 +230,7 @@ nav>ul>li,
   justify-items: center;
 }
 
-.icons>a {
+.icons > a {
   width: 100%;
   height: 100%;
 }
@@ -259,7 +259,7 @@ nav>ul>li,
   cursor: pointer;
 }
 
-.language-bttn>svg {
+.language-bttn > svg {
   width: 100%;
   height: 100%;
 }
@@ -278,7 +278,7 @@ nav>ul>li,
 
 /* ------------------------------------------------ Tag ------------------------------------------------ */
 
-main>h1 {
+main > h1 {
   width: 100%;
   z-index: 1;
   position: absolute;
@@ -337,11 +337,11 @@ main>h1 {
   justify-self: center;
 }
 
-.zeppelin>a {
+.zeppelin > a {
   width: 100%;
 }
 
-.zeppelin>a>svg {
+.zeppelin > a > svg {
   width: 100%;
   height: 50%;
 }
@@ -383,7 +383,7 @@ main>h1 {
   justify-content: center;
 }
 
-.services-title>svg {
+.services-title > svg {
   height: 100%;
 }
 
@@ -395,7 +395,7 @@ main>h1 {
   width: 100%;
 }
 
-.carousel-img>svg {
+.carousel-img > svg {
   width: 100%;
   height: 91%;
   margin-top: 5%;
@@ -442,7 +442,7 @@ main>h1 {
   justify-content: center;
 }
 
-.projects-title>svg {
+.projects-title > svg {
   height: 100%;
 }
 
@@ -469,8 +469,8 @@ main>h1 {
   padding: 4%;
 }
 
-.project-text>h3 {
-  color: #FBB420;
+.project-text > h3 {
+  color: #fbb420;
   font-family: Avenir-Black;
 }
 
@@ -495,7 +495,7 @@ main>h1 {
   justify-self: center;
 }
 
-.open-icon>svg {
+.open-icon > svg {
   height: 100%;
 }
 
@@ -558,7 +558,7 @@ main>h1 {
     height: 50%;
   }
 
-  .services-title>svg {
+  .services-title > svg {
     height: 75%;
   }
 
@@ -589,11 +589,11 @@ main>h1 {
     height: 15%;
   }
 
-  nav>ul {
+  nav > ul {
     grid-template-columns: 17% 17% 32% 17% 17%;
   }
 
-  nav>ul>li,
+  nav > ul > li,
   .header-links {
     font-size: 2.5vw;
   }
@@ -616,25 +616,25 @@ main>h1 {
     height: 85%;
   }
 
-  .background-elements>.img-container:nth-child(1) {
+  .background-elements > .img-container:nth-child(1) {
     grid-row: 1/11;
     align-self: flex-end;
     height: 100%;
   }
 
-  .background-elements>.img-container:nth-child(2) {
+  .background-elements > .img-container:nth-child(2) {
     grid-row: 1/11;
     height: 65%;
     align-self: flex-end;
   }
 
-  .background-elements>.img-container:nth-child(3) {
+  .background-elements > .img-container:nth-child(3) {
     grid-row: 5/11;
     background: url("../assets/images/cities.png") no-repeat 40% bottom;
     background-size: cover;
   }
 
-  main>h1 {
+  main > h1 {
     grid-template-rows: 30% 10% 60%;
     grid-template-columns: 27.5% 45% 27.5%;
     justify-items: center;
@@ -653,12 +653,12 @@ main>h1 {
     width: 30%;
   }
 
-  .zeppelin>a {
+  .zeppelin > a {
     height: 70%;
     width: 100%;
   }
 
-  .zeppelin>a>svg {
+  .zeppelin > a > svg {
     width: 100%;
     height: 70%;
   }
@@ -687,7 +687,7 @@ main>h1 {
     height: 50%;
   }
 
-  .services-title>img {
+  .services-title > img {
     height: 80%;
     width: 80%;
   }
@@ -708,7 +708,7 @@ main>h1 {
     opacity: 0;
   }
 
-  .arrows>img {
+  .arrows > img {
     width: 100%;
     height: 100%;
     margin-left: -20%;
@@ -795,19 +795,19 @@ main>h1 {
     height: 80%;
   }
 
-  .background-elements>.img-container:nth-child(1) {
+  .background-elements > .img-container:nth-child(1) {
     grid-row: 1/11;
     align-self: flex-end;
     height: 100%;
   }
 
-  .background-elements>.img-container:nth-child(2) {
+  .background-elements > .img-container:nth-child(2) {
     grid-row: 1/11;
     height: 65%;
     align-self: flex-end;
   }
 
-  .background-elements>.img-container:nth-child(3) {
+  .background-elements > .img-container:nth-child(3) {
     grid-row: 4/10;
     background: url("../assets/images/cities.png") no-repeat 40% bottom;
     background-size: cover;
@@ -827,7 +827,7 @@ main>h1 {
     overflow: hidden;
   }
 
-  main>h1 {
+  main > h1 {
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     grid-template-rows: 35% 10% 55%;
@@ -861,7 +861,7 @@ main>h1 {
     height: 100%;
   }
 
-  .zeppelin>a>svg {
+  .zeppelin > a > svg {
     width: 100%;
     height: 100%;
   }
@@ -890,7 +890,7 @@ main>h1 {
     width: 70%;
   }
 
-  .projects-title>img {
+  .projects-title > img {
     width: 80%;
     height: 80%;
   }
@@ -959,11 +959,11 @@ main>h1 {
   }
 
   #modal-one {
-    background-color: #49D9C2;
+    background-color: #49d9c2;
   }
 
   #modal-two {
-    background-color: #33CCCD;
+    background-color: #33cccd;
   }
 
   .close-modal {
@@ -972,6 +972,7 @@ main>h1 {
     align-self: center;
     justify-self: right;
     margin-right: 8%;
+    z-index: 1;
   }
 
   .modal-text {
@@ -990,14 +991,14 @@ main>h1 {
     padding: 8%;
   }
 
-  .modal-text>h3 {
-    color: #FBB420;
+  .modal-text > h3 {
+    color: #fbb420;
     font-family: Avenir-Black;
-    text-shadow: 1px 1px 4px rgba(7, 7, 7, 0.50);
+    text-shadow: 1px 1px 4px rgba(7, 7, 7, 0.5);
     padding: 6%;
   }
 
-  .modal-text>ul>li {
+  .modal-text > ul > li {
     margin-bottom: 3%;
   }
 
@@ -1037,7 +1038,7 @@ main>h1 {
     border-top-left-radius: 20px;
   }
 
-  .tab-bar>ul {
+  .tab-bar > ul {
     width: 100%;
     height: 100%;
     display: flex;
@@ -1047,24 +1048,24 @@ main>h1 {
     padding: 0;
   }
 
-  .tab-bar>ul>li {
+  .tab-bar > ul > li {
     width: 15%;
     height: 100%;
     color: #ffffff;
     list-style-type: none;
   }
 
-  .tab-bar>ul>li>a {
+  .tab-bar > ul > li > a {
     height: 100%;
     width: 100%;
   }
 
-  .tab-bar>ul>li>a>svg {
+  .tab-bar > ul > li > a > svg {
     height: 85%;
     width: 85%;
   }
 
-  .header-links.project>svg {
+  .header-links.project > svg {
     margin-top: 4%;
   }
 
@@ -1083,7 +1084,7 @@ main>h1 {
       position: initial;
     }
 
-    .background-elements>.img-container:nth-child(3) {
+    .background-elements > .img-container:nth-child(3) {
       grid-row: 4/10;
       background: url("../assets/images/cities.png") no-repeat 40% bottom;
       background-size: cover;
